--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="div_barra">
         <div class="div_tema">
             <button id="cambiar-tema" onclick="cambiarTema()">
-                <img id="emoji-img" src="images\sun.png" alt="Emoji de sol">
+                <img id="emoji-img" src="page_\sun.png" alt="Emoji de sol">
             </button>
         </div>
     </div>
@@ -20,7 +20,7 @@
     <div class="div_general">
         <div class="div_nick">
             <div class="div_avatar">
-                <img src="avatar.png" alt="">
+                <img src="page_\avatar.png" alt="">
             </div>
             <div class="div_name_desc">
                 <h1> Tomás </h1>
@@ -52,7 +52,7 @@
             <div id="div_proyects">
                 <h2 id="pro">Proyectos.</h2>
                 <div class="proyects">
-                    <img src="proyect1.png" alt="img_proyect1" id="img-proyect1">
+                    <img src="page_\proyect1.png" alt="img_proyect1" id="img-proyect1">
                 </div>
             </div>
 
@@ -60,7 +60,7 @@
                 <h2 id="redes"> <b>Redes @.</b> </h2>
                 <div class="div_git">
                     <a id="git" href="https://github.com/tomas0204" target="_blank">
-                        <img id="github-img" src="images\github.png" alt="Logo de GitHub">
+                        <img id="github-img" src="page_\github.png" alt="Logo de GitHub">
                         <b> GitHub </b>
                     </a>
                 </div>
@@ -81,7 +81,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="page_\script.js"></script>
 </body>
 
 </html>
