--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="page_\styles.css">
-    <title>CV</title>
+    <link rel="icon" href="page_\avatar.ico" type="image/x-icon">
+    <title>Tomás Portfolio</title>
 </head>
 
 <body>
