proyect one (add)

--- a/index.html
+++ b/index.html
@@ -31,29 +31,50 @@
         </div>
 
         <div class="div_descripcion">
-            <hr id="lineas">
-            <h2 id="exp">Experiencia.</h2>
+             
+                <hr id="lineas">
+                <h2 id="exp">Experiencia.</h2>
 
-            <div class="backend">
-                <p id="back">Back End Developer</p>
-                <p id="back_desc"> <b>Abril 2022 — Noviembre 2023</b></p>
-            </div>
-            <div class="info_exp">
-                <li>Administración de elementos dentro una API y 
+                <div class="backend">
+                    <p id="back">Back End Developer</p>
+                    <p id="back_desc"> <b>Abril 2022 — Noviembre 2023</b></p>
+                </div>
+                <div class="info_exp">
+                    <li>Administración de elementos dentro una API y 
                     pasar la información a una base de datos para mostrarlo en pantalla.</li>
-                <li>Diseñar páginas web con el framework Django y hacer landing page usando MySQL.</li>
-                <li>Realizar el Back End de distintos bots de Discord para un fin en específico 
+                    <li>Diseñar páginas web con el framework Django y hacer landing page usando MySQL.</li>
+                    <li>Realizar el Back End de distintos bots de Discord para un fin en específico 
                     dependiendo la necesidad del usuario.</li>
-                <li>Uso de GitHub para trabajar con distintos usuarios al mismo tiempo, mejorar la eficiencia 
+                    <li>Uso de GitHub para trabajar con distintos usuarios al mismo tiempo, mejorar la eficiencia 
                     de distintas áreas del código.
-                </li>
-                <li>Extra: Mejorar mis habilidades en CSS, HTML, JavaScript.</li>
-            </div>
+                    </li>
+                    <li>Extra: Mejorar mis habilidades en CSS, HTML, JavaScript.</li>
+                </div>  
+            
 
             <div id="div_proyects">
                 <h2 id="pro">Proyectos.</h2>
                 <div class="proyects">
-                    <img src="page_\proyect1.png" alt="img_proyect1" id="img-proyect1">
+                    <img class="p1" src="page_\proyect1.png" alt="img_proyect1" id="img-proyect1">
+                    <div class="proyect1_info">
+                        <h3> API de Películas y Series </h3>
+                        <p>
+                            Permite a los usuarios buscar y obtener 
+                            detalles sobre películas o series.
+                        </p>
+                        <div class="img_p1">
+                            <div class="div_django">
+                                <a href="https://www.djangoproject.com/">
+                                    <img class="django" src="page_\django1.jpg" alt="">
+                                </a>
+                            </div>
+                            <div class="div_mysql">
+                                <a href="https://www.mysql.com/">
+                                    <img class="mysql" src="page_\mysql.png" alt="">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
