mysql, django link

--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
                         </p>
                         <div class="img_p1">
                             <div class="div_django">
-                                <a href="https://www.djangoproject.com/">
+                                <a href="https://www.djangoproject.com/" target="_blank">
                                     <img class="django" src="page_\django1.jpg" alt="">
                                 </a>
                             </div>
                             <div class="div_mysql">
-                                <a href="https://www.mysql.com/">
+                                <a href="https://www.mysql.com/" target="_blank">
                                     <img class="mysql" src="page_\mysql.png" alt="">
                                 </a>
                             </div>
