--- a/index.html
+++ b/index.html
@@ -77,7 +77,29 @@
                     </div>
                 </div>
             </div>
-
+            <div id="div_educacion">
+                <h2> Educación. </h2>
+                <div class="educacion_info">
+                    <h3> Aprende Programando (Argentina). </h3>
+                    <h4>  Abril 2023 - Julio 2023 </h4>
+                    <p> Desarrollo con Python I. </p>
+                    <div class="div_certificado">
+                        <a class="certificado" href="page_\DPY-3.0_Certificado Federal.pdf" target="_blank">
+                            <b> Certificado </b>
+                        </a>
+                    </div>
+                    <div class="educacion_info1">   
+                        <h3> Aprende Programando (Argentina). </h3>
+                        <h4> Septiembre 2023 - Diciembre 2023   </h4>
+                        <p> Desarrollo con Python II. </p>
+                        <div class="div_certificado">
+                            <a class="certificado" href="page_/Certificado_AP.pdf" target="_blank">
+                                <b> Certificado </b>
+                            </a>
+                        </div>  
+                    </div>
+                </div>
+            </div>
             <div class="div_redes">
                 <h2 id="redes"> <b>Redes @.</b> </h2>
                 <div class="div_git">
