--- a/index.html
+++ b/index.html
@@ -55,7 +55,13 @@
             <div id="div_proyects">
                 <h2 id="pro">Proyectos.</h2>
                 <div class="proyects">
-                    <img class="p1" src="page_\proyect1.png" alt="img_proyect1" id="img-proyect1">
+                    
+                    <div id="video-container">
+                        <video class="p1" controls id="video-proyect1" muted>
+                            <source src="page_\2024-01-05 22-25-17.mp4" type="video/mp4">
+                            Tu navegador no soporta el tag de video.
+                        </video>
+                    </div>
                     <div class="proyect1_info">
                         <h3> API de Películas y Series </h3>
                         <p>
