Add freelance job

--- a/index.html
+++ b/index.html
@@ -138,7 +138,34 @@
                             </div>
                         </div>
                     </div>
-                    <h2 >Freelance Jobs <i class="fas fa-briefcase" ></i></h2>
+                    <h2 >To Highlight Freelance Jobs <i class="fas fa-briefcase" ></i></h2>
+                    <div class="project1">
+                        <div id="video-container">
+                            <video class="p1" controls id="video-project1" muted>
+                                <source src="page_/exeljob.mp4" type="video/mp4">
+                                Tu navegador no soporta el tag de video.
+                            </video>
+                        </div>
+                            <div class="project1_info">
+                                <h3> Excel automation with Python </h3>
+                                <p>
+                                    Program that is responsible for summarizing a lot of data in a spreadsheet.                          
+                                </p>
+                                
+                                <div class="img_p2">
+                                    <div class="image_container">
+                                        <a href="https://www.python.org/" target="blank">
+                                            <img class="django" src="page_/python.png" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="div_code">
+                                        <a class="code" href="" target="_blank">
+                                            <b> Code </b>
+                                        </a>
+                                    </div> 
+                                </div>
+                            </div>
+                    </div>
                     <div class="project2">
                         <div id="video-container">
                             <video class="p1" controls id="video-project1" muted>
