--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
-<body>
+<body onclick="PlayAudio()">
     <div class="div_barra">
         <div class="div_tema">
             <button id="cambiar-tema" onclick="cambiarTema()">
                 <img id="emoji-img" src="page_\sun.png" alt="Emoji de sol">
             </button>
         </div>
+        <audio id="musica" loop>
+            <source src="page_/dbz.mp3" type="audio/mp3">
+            Tu navegador no soporta el formato de audio.    
+        </audio>
+        
     </div>
     <div class="TODO">
         <div class="div_general">
@@ -271,6 +276,11 @@
             </div>
         </div>
     </div>
+    <script>
+        function PlayAudio(){
+            document.getElementById("musica").play();
+        }
+    </script>
     <script src="page_\script.js"></script>
 </body>
 
