add button and link monkey

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                         </a>
                                     </div>
                                     <div class="div_visit">
-                                        <a class="visit" href="https://vercel-beta-steel.vercel.app/" target="_blank">
+                                        <a class="visit" href="https://monkey-project.vercel.app/" target="_blank">
                                             <b> Visit </b>
                                         </a>
                                     </div> 
