some basics changes

--- a/index.html
+++ b/index.html
@@ -42,15 +42,16 @@
                     <div class="desc">
                         <div class="backend">
                             <p id="back">Back End Developer</p>
-                            <p id="back_desc"> <b>April 2022 — November 2023</b></p>
+                            <p id="back_desc"> <b>April 2022 — January 2025</b></p>
                         </div>
                         <div class="info_exp">
                             <li>Administration of elements within an API and passing the information to a database to display on screen.</li>
-                            <li>Designing web pages with the Django framework and creating landing pages using MySQL.</li>
+                            <li>Designing web pages with the Django framework (using MySQL) and creating landing pages.</li>
                             <li>Developing the back end of various Discord bots for specific purposes depending on the user's needs.</li>
                             <li>Using GitHub to collaborate with different users simultaneously, improving the efficiency of various areas of the code.</li>
+                            <li>Making automations for multiple clients and small agencies.</li>
+                            <li>I started to actively study English.</li>
                             <li>Extra: Improving my skills in CSS, HTML, JavaScript. </li>
-
                         </div>  
                     </div>
 
@@ -195,7 +196,7 @@
                                     </div>
                                     <div class="div_code">
                                         <a class="code" href="" target="_blank">
-                                            <b> Code </b>
+                                            <b> --- </b>
                                         </a>
                                     </div> 
                                 </div>
@@ -276,11 +277,11 @@
             </div>
         </div>
     </div>
-    <script>
+    <!-- <script>
         function PlayAudio(){
             document.getElementById("musica").play();
         }
-    </script>
+    </script> -->
     <script src="page_\script.js"></script>
 </body>
 
